# pipeline-northwind_traders

nortwhind-traders/: .gitignore  dbt_project.yml  pyproject.toml
nortwhind-traders/models/bronze/: sources.yml
nortwhind-traders/models/gold/: gld_dim_customers.sql  gld_dim_employee_territories.sql  gld_dim_employees.sql  gld_dim_geography.sql  gld_dim_products.sql  gld_dim_shippers.sql  gld_fct_orders.sql
nortwhind-traders/models/silver/: srv_dim_categories.sql  srv_dim_customers.sql  srv_dim_employee_territories.sql  srv_dim_employees.sql  srv_dim_locality.sql  srv_dim_products.sql  srv_dim_shippers.sql  srv_dim_suppliers.sql  srv_fct_orders.sql
sql-airbyte-dbt/: .gitignore  Airbyte_vantagens.md  docker-compose.yaml  northwind_traders.sql
