[tool.poetry]
name = "nortwhind-traders"
version = "0.1.0"
description = ""
authors = ["RobertBarbosa <robert.barbosa@atalaiaalimentos.ind.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-bigquery = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
